fix lang on mobile / replace logo on mobile-menu

--- a/src/style/partials/menu/menu-mob.sass
+++ b/src/style/partials/menu/menu-mob.sass
@@ -45,6 +45,8 @@
 		width: 140px
 		+r(480)
 			width: 112px
+		.logo__img
+			max-width: 100%
 	&__nav
 		margin: auto
 		display: flex
